<resources>
    <string name="app_name">Popular Movies App</string>
    <string name="action_settings">Settings</string>
    <string name="action_sort_by_popular"> Most Popular </string>
    <string name="action_sort_by_highest"> Highest Rated </string>
    <string name="action_sort_by_favorites"> Favorites </string>
    <string name="action_sort_by"> Sort by :</string>
    <string name="title_activity_detail">Movie Details</string>
    <string name="rating">Rating :</string>
    <string name="release_date">Released :</string>
    <string name="synopsis">Plot Synopsis :</string>
    <string name="trailers">Trailers :</string>
    <string name="reviews">Reviews :</string>
    <string name="saved_favorite_key">favorite</string>
    <string name="content_authority">com.example.sanch.myapplication</string>
    <string name="added_to_favorites">Added to Favorites</string>
    <string name="deleted_from_favorites">Already in Favorites</string>
    <string name="favorite_List_empty"> Favorite List is empty</string>
    </resources>
