 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
         android:fillViewport="true"
        android:id="@+id/detail_layout" tools:showIn="@layout/detail_activity"
        tools:context="com.example.sanch.myapplication.DetailActivityFragment">

      <LinearLayout
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="10dp">

         <TextView
             android:id="@+id/detail_movie_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="25sp"
             android:textStyle="bold"
             android:textColor="@android:color/white"
             android:background="@color/colorTitleBg"/>

         <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:padding="10dp">

             <ImageView
               android:id="@+id/detail_poster_image_view"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="left"/>

                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:padding="10dp">

                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/release_date"
                         android:textStyle="bold"
                         android:textSize="@dimen/text_size" />

                     <TextView
                         android:id="@+id/detail_movie_release_date"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textColor="@color/colorPrimaryDark"/>

                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/rating"
                         android:textStyle="bold"
                         android:textSize="@dimen/text_size"/>

                     <TextView
                         android:id="@+id/detail_movie_user_rating"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="@dimen/text_size"
                         android:textColor="@color/colorPrimaryDark"/>

                     <View
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
                         android:layout_marginBottom="8dp"
                         android:layout_marginTop="8dp"/>
                     <Button
                         android:id="@+id/favorite_button"
                         android:clickable="true"
                         android:background="#62e8e4"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Mark as Favorite"
                         android:visibility="gone"/>
                 </LinearLayout>
            </LinearLayout>

                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_marginBottom="8dp"
                     android:layout_marginTop="8dp"
                     android:background="@android:color/darker_gray"/>

                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/synopsis"
                     android:textStyle="bold"
                     android:textSize="@dimen/text_size"/>

                 <TextView
                     android:id="@+id/detail_movie_plot"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"/>

<!-- Trailers -->
          <android.support.v7.widget.CardView
              android:id="@+id/trailers_cardview"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="20dp"
              android:visibility="gone">

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:padding="10dp">

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/trailers"
                  android:textStyle="bold"
                  android:textSize="@dimen/text_size" />

              <ListView
                  android:id="@+id/detail_trailers"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:nestedScrollingEnabled="true"
                  android:scrollbarAlwaysDrawVerticalTrack="true" />
         </LinearLayout>
      </android.support.v7.widget.CardView>

          <!--- Reviews-->
          <android.support.v7.widget.CardView
              android:id="@+id/reviews_cardview"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="20dp"
              android:visibility="gone">

              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:padding="10dp">

                  <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textSize="12sp"
                      android:text="@string/reviews"
                      android:textStyle="bold" />

                  <ListView
                      android:id="@+id/detail_reviews"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:nestedScrollingEnabled="true"
                      android:scrollbarAlwaysDrawVerticalTrack="true" />
              </LinearLayout>
          </android.support.v7.widget.CardView>
      </LinearLayout>
 </ScrollView>
